--- a/Notes Imitation/Base.lproj/Main.storyboard
+++ b/Notes Imitation/Base.lproj/Main.storyboard
@@ -16,6 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" systemColor="systemYellowColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Note" textLabel="bWq-mM-MhZ" style="IBUITableViewCellStyleDefault" id="g2u-of-dtG">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
@@ -64,6 +65,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="C9t-4h-7Li"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" systemColor="systemYellowColor"/>
                         <constraints>
                             <constraint firstItem="0zj-x2-u8m" firstAttribute="centerY" secondItem="teM-aW-tTg" secondAttribute="centerY" id="SvK-lA-2uN"/>
                             <constraint firstItem="0zj-x2-u8m" firstAttribute="top" secondItem="teM-aW-tTg" secondAttribute="topMargin" constant="-44" id="Ump-tc-PKW"/>
@@ -104,6 +106,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
